--- a/style.css
+++ b/style.css
@@ -34,7 +34,12 @@ body {
 
 }
 
-.texts {
+#name{
+    font-size:x-large; 
+    padding: 15px;
+}
+
+#texts {
     color: #772b36;
     display: flex;
     align-items: center;
@@ -64,9 +69,17 @@ body {
     background-color: #8b8585;
 }
 
-
 .icons {
     width: 50px;
     height: 50px;
     padding: 10px;
+}
+
+@media(max-width: 625px){
+    #name{
+        font-size: 100%;
+    }
+    .infor{
+        font-size: 100%;
+    }
 }
